Задача "Почта" - переписал полностью метод.